fix : align item

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ main {
 .title {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   h1 {
     color: white;
     font-size: 32px;
